# flare

./: .gitignore  docker-compose.yml  readme.md
.github/workflows/: ci.yml
cert-gen/: ca-cert.conf  cert-gen.sh  client-cert.conf  server-cert.conf
server/: .dockerignore  Cargo.toml  config.toml.example  dockerfile  openapi.sh
server/.config/: nextest.toml
server/flare/: Cargo.toml
server/flare-sim/: Cargo.toml
server/flare-sim/src/: helpers.rs  lib.rs  sim.rs  test_builder.rs
server/flare-test/: Cargo.toml
server/flare-test/tests/: test.rs
server/flare/src/: config.rs  crypto.rs  db.rs  lib.rs  macros.rs  store.rs  util.rs
server/flare/src/api/: api_params.rs  error.rs  mod.rs  openapi.rs  routes.rs
server/flare/src/auth/: discord_oauth.rs  jwt.rs  mod.rs  oauth.rs
server/prisma/: schema.prisma
server/prisma-cli/: Cargo.toml
