[package]
name = "flare-sim"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
dotenv = { version = "0.15", optional = true }
flare = { path = "../flare", features = ["sim"], optional = true }
rand = { version = "0.8", features = ["std"], optional = true }
rand_chacha = { version = "0.3", optional = true }
rand_xoshiro = { version = "0.6", optional = true }
reqwest = { version = "0.12", features = ["json", "cookies"] } # todo make all of this optional ig
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0" }
serde_json = { version = "1.0", optional = true }
tempfile = { version = "3", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
turmoil = "0.6.2"


[features]
sim = [
    "dep:dotenv",
    "dep:flare",
    "dep:rand",
    "dep:rand_chacha",
    "dep:rand_xoshiro",
    "dep:serde_json",
    "dep:tempfile",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
]
