[package]
name = "flare-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
serde_json = "1.0"
flare = { path = "../flare" }
flare-sim = { path = "../flare-sim", features = ["sim"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
