[package]
name = "flare"
version = "0.1.1"
edition = "2021"
default-run = "flare"

[lib]
doctest = false

[[bin]]
name = "flare"
path = "src/bin/main.rs"
test = false

[[bin]]
name = "api-doc"
path = "src/bin/openapi.rs"
required-features = ["api-doc"]
test = false

[dependencies]
config = "0.14.0"
jsonwebtoken = "9"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
cookie = "0.18.1"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
  "migrations",
  "postgresql"
], default-features = false }
hyper = "1.3.1"
utoipa = { version = "4.2.3" }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
secstr = "0.5"
serde_json = "1.0.117"
tower-http = { version = "0.5", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
chrono = "0.4.38"
oauth2 = "4.4.2"
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.26.1", features = ["aio", "tokio-comp"]}
# TODO sort this mess



[features]
default = ["api-doc"]
sim = []
api-doc = []
